fix: image overflow fixed ⚒️

--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -15,6 +15,7 @@
   display: grid;
   place-content: center;
   background: white;
+  overflow: hidden;
 }
 
 .Text {
